Use version 12 (ubuntu 18.04)

--- a/crePhp/Dockerfile
+++ b/crePhp/Dockerfile
@@ -39,17 +39,17 @@ RUN apt-get update \
     && apt-get -y --no-install-recommends install php$PHP_VERSION-cli php$PHP_VERSION-curl \
         php$PHP_VERSION-intl php$PHP_VERSION-bz2 php$PHP_VERSION-imap php$PHP_VERSION-gmp ffmpeg \
         php$PHP_VERSION-json php$PHP_VERSION-opcache php$PHP_VERSION-readline \ 
-        php$PHP_VERSION-xml php$PHP_VERSION-zip ssmtp libsodium-dev mailutils  \
+        php$PHP_VERSION-xml php$PHP_VERSION-zip ssmtp libsodium-dev mailutils \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/* 
  
-# remove php$PHP_VERSION-mcrypt 
+# removed php$PHP_VERSION-mcrypt 
 # https://lukasmestan.com/install-mcrypt-extension-in-php7-2/
 #
-# apt-get -y install gcc make autoconf libc-dev pkg-config
-# apt-get -y install php-dev libmcrypt-dev php-pear
-# pecl channel-update pecl.php.net
-# pecl install mcrypt-1.0.1
+RUN apt-get -y install gcc make autoconf libc-dev pkg-config
+RUN apt-get -y install php-dev libmcrypt-dev php-pear
+RUN pecl channel-update pecl.php.net
+RUN pecl install mcrypt-1.0.1
 #
 # Add to php.ini as well....
 
