--- a/creNginx/Dockerfile
+++ b/creNginx/Dockerfile
@@ -5,10 +5,10 @@
 #
 
 # Pull base image.
-FROM tamboraorg/creubuntu:2011.0
+FROM tamboraorg/creubuntu:2012.0
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
-ARG BUILD_YEAR=2011
+ARG BUILD_YEAR=2012
 ARG BUILD_MONTH=0
 
 ENV NGINX_VERSION 1.14.1
@@ -30,6 +30,8 @@ RUN \
   echo "\ndaemon off;" >> /etc/nginx/nginx.conf && \
   sed -i 's/worker_processes  1/worker_processes  auto/' /etc/nginx/nginx.conf && \
   chown -R www-data:www-data /var/lib/nginx
+
+RUN ufw app list && ufw allow 'Nginx Full' && ufw status
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \ 
     echo "$(date +'%F %R') \t creNginx \t $(/usr/sbin/nginx -v 2>&1 | sed -e "s/^nginx version: nginx\///" )" >> /cre/versions.txt 
