--- a/crePhp/Dockerfile
+++ b/crePhp/Dockerfile
@@ -47,7 +47,7 @@ RUN apt-get update \
 # https://lukasmestan.com/install-mcrypt-extension-in-php7-2/
 #
 #RUN apt-get -y install autoconf pkg-config php-pear
-RUN apt-get -y install php$PHP_VERSION-dev libmcrypt-dev 
+RUN apt-get -y install php-dev libmcrypt-dev 
 RUN pecl channel-update pecl.php.net
 RUN pecl install mcrypt-1.0.1
 # Added to php.ini as well....
