--- a/creJupyter/Dockerfile
+++ b/creJupyter/Dockerfile
@@ -23,8 +23,11 @@ FROM tamboraorg/cretensorflow:2012.0
 
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
+ARG BUILD_YEAR=2012
+ARG BUILD_MONTH=0
+
 # version: yyyy.n for stable versions / 0.yyyy for development
-ENV DEBIAN_FRONTEND noninteractive 
+#ENV DEBIAN_FRONTEND noninteractive 
 ENV INITRD No
 #ENV LANG en_US.UTF-8
 ENV JUPYTER_VERSION 999999 
