--- a/crePhp/Dockerfile
+++ b/crePhp/Dockerfile
@@ -40,7 +40,7 @@ RUN apt-get update \
         php$PHP_VERSION-intl php$PHP_VERSION-bz2 php$PHP_VERSION-imap php$PHP_VERSION-gmp ffmpeg \
         php$PHP_VERSION-json php$PHP_VERSION-opcache php$PHP_VERSION-readline \ 
         php$PHP_VERSION-xml php$PHP_VERSION-zip ssmtp libsodium-dev mailutils \
-        php-dev libmcrypt-dev \
+        php-dev php-pear libmcrypt-dev \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/* 
  
