--- a/crePostgres/Dockerfile
+++ b/crePostgres/Dockerfile
@@ -1,15 +1,14 @@
 # Adapted from https://github.com/partlab/docker/blob/master/ubuntu-postgresql/Dockerfile
 # and https://github.com/docker-library/postgres/blob/master/9.5/docker-entrypoint.sh
-FROM tamboraorg/creubuntu:2012.0
+FROM tamboraorg/creubuntu:0.2020
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
 ARG BUILD_YEAR=2012
 ARG BUILD_MONTH=0
 
-ENV DEBIAN_FRONTEND noninteractive
-ENV INITRD No
+#ENV DEBIAN_FRONTEND noninteractive
+#ENV INITRD No
 ENV POSTGRES_VERSION 10
-#ENV TZ=UTC
 
 LABEL Name="Postgres for CRE" \
       Year=$BUILD_YEAR \
