--- a/creMySqlAdmin/Dockerfile
+++ b/creMySqlAdmin/Dockerfile
@@ -5,8 +5,8 @@ MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 ARG BUILD_YEAR=2012
 ARG BUILD_MONTH=0
 
-ENV DEBIAN_FRONTEND noninteractive
-ENV INITRD No
+#ENV DEBIAN_FRONTEND noninteractive
+#ENV INITRD No
 #ENV LANG en_US.UTF-8
 ENV MYADMIN_VERSION 999.999
 
