--- a/crePython/Dockerfile
+++ b/crePython/Dockerfile
@@ -4,7 +4,7 @@
 #
 
 # Pull base image.
-FROM tamboraorg/crenode:2012.0   
+FROM tamboraorg/crenode:0.2020
 
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
@@ -12,8 +12,8 @@ ARG BUILD_YEAR=2012
 ARG BUILD_MONTH=0
 
 # version: yyyy.n for stable versions / 0.yyyy for development
-ENV DEBIAN_FRONTEND noninteractive 
-ENV INITRD No
+#ENV DEBIAN_FRONTEND noninteractive 
+#ENV INITRD No
 #ENV LANG en_US.UTF-8
 ENV NPM_VERSION 10
 ENV PYTHON_VERSION 999999 
