--- a/creCovise/Dockerfile
+++ b/creCovise/Dockerfile
@@ -3,12 +3,14 @@
 # https://github.com/hlrs-vis/covise
 
 # Pull base image.
-FROM tamboraorg/crepython:0.2020
+FROM tamboraorg/crepython:latest
 
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
-ARG BUILD_YEAR=2012
+ARG BUILD_YEAR=2018
 ARG BUILD_MONTH=0
+ARG BUILD_TAG=latest
+
 
 # version: yyyy.n for stable versions / 0.yyyy for development
 ENV DEBIAN_FRONTEND noninteractive 
@@ -17,11 +19,12 @@ ENV INITRD No
 ENV COVISE_VERSION 999999 
 
 LABEL Name="Covise for CRE" \
+      CRE=$CRE_VERSION \ 
       Year=$BUILD_YEAR \
       Month=$BUILD_MONTH \
       Version=$COVISE_VERSION \
       OS="Ubuntu:$UBUNTU_VERSION" \
-      Build_=$CRE_VERSION 
+      Build_=$BUILD_TAG 
 
 RUN sh -c "wget -O - http://dl.openfoam.org/gpg.key | apt-key add -"
 RUN add-apt-repository http://dl.openfoam.org/ubuntu
