--- a/crePhpYii3b/Dockerfile
+++ b/crePhpYii3b/Dockerfile
@@ -58,22 +58,21 @@ RUN cd /cre/tmp/yii \
 
 RUN cd /cre/tmp/yii \
  && composer config repositories.npm '{"type": "composer", "url": "https://asset-packagist.org"}' \
-# && composer require --prefer-stable --update-with-all-dependencies bower-asset/vue \
-# && composer require --prefer-stable --update-with-all-dependencies bower-asset/vuex \
-# && composer require --prefer-stable --update-with-all-dependencies bower-asset/vue-router \
  && composer require --prefer-stable --update-with-all-dependencies npm-asset/vue \
  && composer require --prefer-stable --update-with-all-dependencies npm-asset/vue-router \
  && composer require --prefer-stable --update-with-all-dependencies npm-asset/vue-resource \
  && composer require --prefer-stable --update-with-all-dependencies npm-asset/axios \
  && composer require --prefer-stable --update-with-all-dependencies npm-asset/vue-notification \
  && composer require --prefer-stable --update-with-all-dependencies npm-asset/vue-js-modal \
-
  && composer require --prefer-stable --update-with-all-dependencies npm-asset/primevue \
- && composer require --prefer-stable --update-with-all-dependencies npm-asset/primeicons 
+ && composer require --prefer-stable --update-with-all-dependencies npm-asset/primeicons \
+ && composer require --prefer-stable --update-with-all-dependencies npm-asset/primeicons npm-asset/jquery \
+ && composer require --prefer-stable --update-with-all-dependencies npm-asset/primeicons npm-asset/leaflet\ 
+ && composer require --prefer-stable --update-with-all-dependencies npm-asset/primeicons npm-asset/ol \
+ && composer require --prefer-stable --update-with-all-dependencies npm-asset/primeicons npm-asset/d3 
 
-# may add: jquery, leaflet, ol, d3
-
-
+#npm-asset/vuex
+#npm-asset/vuex-persistedstate
 
 # sync to www in entry-point
 
