+ npm-asset/vuex-persistedstate

--- a/crePhpYii3b/Dockerfile
+++ b/crePhpYii3b/Dockerfile
@@ -66,8 +66,8 @@ RUN cd /cre/tmp/yii \
  && composer require --prefer-stable --update-with-all-dependencies npm-asset/vue-js-modal \
  && composer require --prefer-stable --update-with-all-dependencies npm-asset/primevue \
  && composer require --prefer-stable --update-with-all-dependencies npm-asset/primeicons \
- && composer require --prefer-stable --update-with-all-dependencies npm-asset/vuex 
-## && composer require --prefer-stable --update-with-all-dependencies npm-asset/vuex-persistedstate
+ && composer require --prefer-stable --update-with-all-dependencies npm-asset/vuex \
+ && composer require --prefer-stable --update-with-all-dependencies npm-asset/vuex-persistedstate
 ## && composer require --prefer-stable --update-with-all-dependencies npm-asset/jquery \
 ## && composer require --prefer-stable --update-with-all-dependencies npm-asset/leaflet \ 
 ## && composer require --prefer-stable --update-with-all-dependencies npm-asset/ol \
